# infra-sentinel

./: .env.example  .gitignore  Dockerfile  README.md  demo.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: systemd-deploy.md
mocks/: mock_server.py
sample_data/: ollama_response.json  prometheus_up.json  zabbix_problems.json
sentinel/: __init__.py  analyzer.py  cli.py  config.py  http.py  logging.py  notifiers.py  sources.py  state.py  watchdog.py
site/: index.html
site-light/: index.html
tests/: test_state.py  test_watchdog.py
